; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/rme9652/extr_rme9652.c_rme9652_compute_period_size.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/rme9652/extr_rme9652.c_rme9652_compute_period_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_rme9652 = type { i32, i32, i32, i32 }

@RME9652_latency = common dso_local global i32 0, align 4
@RME9652_buf_pos = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_rme9652*)* @rme9652_compute_period_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rme9652_compute_period_size(%struct.snd_rme9652* %0) #0 {
  %2 = alloca %struct.snd_rme9652*, align 8
  %3 = alloca i32, align 4
  store %struct.snd_rme9652* %0, %struct.snd_rme9652** %2, align 8
  %4 = load %struct.snd_rme9652*, %struct.snd_rme9652** %2, align 8
  %5 = getelementptr inbounds %struct.snd_rme9652, %struct.snd_rme9652* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @RME9652_latency, align 4
  %8 = and i32 %6, %7
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @rme9652_decode_latency(i32 %9)
  %11 = add nsw i32 %10, 8
  %12 = shl i32 1, %11
  %13 = load %struct.snd_rme9652*, %struct.snd_rme9652** %2, align 8
  %14 = getelementptr inbounds %struct.snd_rme9652, %struct.snd_rme9652* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load %struct.snd_rme9652*, %struct.snd_rme9652** %2, align 8
  %16 = getelementptr inbounds %struct.snd_rme9652, %struct.snd_rme9652* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = mul nsw i32 %17, 2
  %19 = sub nsw i32 %18, 1
  %20 = load i32, i32* @RME9652_buf_pos, align 4
  %21 = and i32 %19, %20
  %22 = load %struct.snd_rme9652*, %struct.snd_rme9652** %2, align 8
  %23 = getelementptr inbounds %struct.snd_rme9652, %struct.snd_rme9652* %22, i32 0, i32 2
  store i32 %21, i32* %23, align 4
  %24 = load %struct.snd_rme9652*, %struct.snd_rme9652** %2, align 8
  %25 = getelementptr inbounds %struct.snd_rme9652, %struct.snd_rme9652* %24, i32 0, i32 3
  store i32 80, i32* %25, align 4
  ret void
}

declare dso_local i32 @rme9652_decode_latency(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
